--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^4.3.2+2
   trotter: ^1.1.0
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
