--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   provider: ^4.3.2+2
   trotter: ^1.1.0
   intl: ^0.16.1
+  shared_preferences: ^0.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
