--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "目指せおさいふミニマリスト！",
-    "short_name": "財布ミニマリスト",
+    "short_name": "財布ミニマム",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
