bug fix for input

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "目指せおさいふミニマリスト！",
+    "name": "目指せおサイフミニマリスト！",
     "short_name": "財布ミニマム",
     "start_url": ".",
     "display": "standalone",
